[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Davirain-Su <davirain.yin@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A sample project with wasm-pack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]
