[package]
name = "use-scale"
version = "0.1.0"
authors = ["Davirain-Su <davirain.yin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", default-features = false, version = "1.3.6" }
parity-scale-codec-derive = "1.2.2"