[package]
name = "youtuber_analysize_web_aplication"
version = "0.1.0"
authors = ["DaviRain-Su <davirain.yin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", feature = ["postgres"]}
dotenv = "0.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"  