[package]
name = "substrate-cli"
version = "0.1.0"
authors = ["DaviRain-Su <davirain.yin@gamil.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 用于命令行的解析
clap = {version = "2.27", features = ["yaml"]}
# 用于log的使用
env_logger = "0.8.3"
log = "0.4.14"