[package]
name = "example-redis"
version = "0.1.0"
authors = ["Davirain-Su <davirain.yin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
mini-redis = "0.4"
env_logger = "0.8.2"
log = "0.4.14"
bytes = "1.0.1"