[package]
name = "myblog"
version = "0.1.0"
authors = ["DaviRain-Su <davirain.yin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.6.0"
chrono = "0.4.9"
actix-web = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.5"
bson = "0.14.0"
mongodb = "1.1.1"
lazy_static = "1.4.0"

