[package]
name = "mystore"
version = "0.1.0"
authors = ["DaviRain-Su <davirain.yin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "*"
actix-web = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
diesel = {version = "*", features =["sqlite"]}
dotenv = "*"
futures = "*"
