[package]
name = "mystore"
version = "0.1.0"
authors = ["DaviRain-Su <davirain.yin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "*"
actix-web = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
diesel = {version = "*", features =["mysql","r2d2"]}
dotenv = "*"
futures = "*"
jsonwebtoken ="*"
bcrypt = "*"
chrono = { version = "*", features = ["serde"]}
#csrf-token = { git = "http://git@github.com/3dom-co-jp/csrf-token.git" }
csrf-token = { git = "https://git@github.com/future-science-research/csrf-token.git", branch="v0.2.x" }