[package]
name = "net-disk"
version = "0.1.0"
authors = ["DaviRain-Su <davirain.yin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "*"
mio = "*"
serde = "*"
serde_derive = "*"
toml = "*"
log = "*"
env_logger = "*"

[config]
ip = "127.0.0.1"
port = "2000"
thread_num = "8"
capacity = "10"
