[package]
name = "rrdis-cli"
version = "0.1.0"
authors = ["DaviRain-Su <davirain.yin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
tokio = { version = "0.2", features = ["full"] }
bytes = "0.5.4"
structopt = "0.3.14"
log= "0.4.8"
pretty_env_logger = "0.4.0"
