[package]
name = "use_grpc"
version = "0.1.0"
authors = ["DaviRain-Su <davirain.yin@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpc = "0.8.2"
protobuf = "2.17.0"
grpc-protobuf = "0.8.2"
futures = "0.3.5"
tls-api = "0.4.0"

[build-dependencies]
protoc-rust-grpc = "0.8.2"