[package]
name = "use_serde1"
version = "0.1.0"
authors = ["DaviRain-Su <davirain.yin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
serde_yaml = "0.8.13"