[package]
name = "kvs"
version = "0.1.0"
authors = ["DaviRain-Su <davirain.yin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"

[dev-dependencies]
assert_cmd = "*"
predicates = "*"




