[package]
name = "net-disk-client"
version = "0.1.0"
authors = ["DaviRain-Su <davirain.yin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
toml = "*"
log = "*"
env_logger = "*"
rand = "*"
rust-crypto = "^0.2"


[config]
ip = "::1"
port = "2000"
thread_num = "8"
